# utopia

./: Cargo.toml  Makefile  README.md  create_disk_wsl.sh  rustc-ice-2026-03-01T13_49_58-4048.txt  rustc-ice-2026-03-01T13_50_10-1928.txt  rustc-ice-2026-03-01T14_18_57-3348.txt  rustc-ice-2026-03-01T14_54_16-1532.txt  x86_64-unknown-none.json
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs
bootloader/src/: main.rs
kernel/: Cargo.toml  linker.ld
kernel/.cargo/: config.toml
kernel/src/: boot_info.rs  error.rs  font.rs  limine_entry.rs  limine_protocol.rs  main.rs  multiboot2.rs  serial.rs  vga_buffer.rs
limine/: Cargo.toml  build.rs  limine.conf
limine/src/: main.rs
